New section: other activities (#6)
* Start working on other activities section.

* Add conference report.

* Add PhD workshop organisation

* Try adding google scholar

* Add reading group.

* Revision of text.

--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
                   <a class="nav-link" href="#Progress">Work in Progress</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" href="#Other">Other Activities</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="#Resume">Resume</a>
                 </li>
                 <li class="nav-item">
@@ -157,6 +160,15 @@
                   target="_blank"
                 >
                   <span class="fa fa-linkedin" style="font-size: 48px"></span>
+                </a>
+                &nbsp;
+                <a
+                  href="https://scholar.google.com/citations?user=_g72WecAAAAJ&hl=en&oi=ao"
+                  class="n_link"
+                  role="button"
+                  target="_blank"
+                >
+                  <span class="fa fa-google" style="font-size: 48px"></span>
                 </a>
               </p>
             </div>
@@ -380,6 +392,119 @@
           </div>
         </section>
 
+        <!-- SECTION OTHER ACTIVITIES -->
+
+        <section id="Other">
+          <hr class="my-3" />
+
+          <div class="row">
+            <div class="col-md">
+              <h4 class="section">Other activities</h4>
+              <p>
+                I had the opportunity to assist
+                <a
+                  href="https://keithkuester.eu"
+                  class="n_link"
+                  role="button"
+                  target="_blank"
+                  >Keith Kuester</a
+                >
+                in organizing the 53rd Konstanz Seminar on Monetary Theory and
+                Policy in 2022. My responsibilities included co-authoring the
+                conference report, which you can find below. I am also looking
+                forward to assisting in the organization of the conference again
+                in 2023. For more information about the conference, please visit
+                the
+                <a
+                  href="https://konstanzseminar.org"
+                  class="n_link"
+                  role="button"
+                  target="_blank"
+                  >conference website</a
+                >.
+              </p>
+              <p class="p_title_p">
+                <b>
+                  53rd Konstanz Seminar on Monetary Theory and Policy 2022
+                </b>
+                | with Gero Stiepelmann
+              </p>
+              <p class="p_abstract_p">
+                <a
+                  class="collapse-show showAbstract"
+                  data-toggle="collapse"
+                  href="#abstract-Konstanz2022"
+                  role="button"
+                  aria-expanded="false"
+                  aria-controls="collapse-ImpEmp"
+                >
+                  abstract
+                </a>
+                |
+                <a
+                  href="/papers/Konstanz2022.pdf"
+                  role="button"
+                  target="_blank"
+                >
+                  published version <span class="fa fa-file-pdf-o"></span>
+                </a>
+                |
+                <a
+                  class="collapse-show showAbstract"
+                  data-toggle="collapse"
+                  href="#bib-Konstanz2022"
+                  role="button"
+                  aria-expanded="false"
+                  aria-controls="collapse-ImpEmp"
+                >
+                  citation
+                </a>
+                <a
+                  href="/papers/Konstanz2022.bib"
+                  role="button"
+                  target="_blank"
+                >
+                  <span class="fa fa-file-code-o"></span>
+                </a>
+              </p>
+              <div class="px-4 collapse card info" id="abstract-Konstanz2022">
+                <p class="text-justify">
+                  In this report, we summarize the contributions to the 53rd
+                  Konstanz Seminar on Monetary Theory and Policy 2022
+                </p>
+              </div>
+              <div class="px-4 collapse card info" id="bib-Konstanz2022">
+                <pre>
+@Article{Hildebrand2022_CCM,
+  author       = {Hildebrand, Sebastian and Stiepelmann, Gero},
+  date         = {2022},
+  journaltitle = {Credit and Capital Markets – Kredit und Kapital},
+  title        = {53rd Konstanz Seminar on Monetary Theory and Policy 2022},
+  doi          = {10.3790/ccm.55.3.419},
+  number       = {3},
+  pages        = {419--426},
+  volume       = {55},
+}
+               </pre
+                >
+              </div>
+              <p>
+                In addition, I will be co-organizing the 1st
+                Bonn-Frankfurt-Mannheim PhD Workshop, which will be held on May
+                5-6, 2023 in Frankfurt. Stay tuned for more details about the
+                event.
+              </p>
+              <p>
+                I have organized the Bonn macro reading group for PhD students
+                on a regular basis, including in summer 2021, winter 2021,
+                summer 2022, and winter 2022. If you are interested in the
+                line-up, please do not hesitate to send me an email for more
+                information.
+              </p>
+            </div>
+          </div>
+        </section>
+
         <!-- SECTION RESUME -->
 
         <section id="Resume">
@@ -560,8 +685,8 @@
       <footer class="py-3 bg-dark">
         <div class="container px-4">
           <p class="m-0 text-center text-white">
-            Sebastian Hildebrand - University of Bonn | Last updated: December
-            2022.
+            Sebastian Hildebrand - University of Bonn | Last updated: January
+            2023.
           </p>
         </div>
       </footer>
