Just change link style for some links.

--- a/index.html
+++ b/index.html
@@ -415,13 +415,7 @@
                 forward to assisting in the organization of the conference again
                 in 2023. For more information about the conference, please visit
                 the
-                <a
-                  href="https://konstanzseminar.org"
-                  class="n_link"
-                  role="button"
-                  target="_blank"
-                  >conference website</a
-                >.
+                <a href="https://konstanzseminar.org">conference website</a>.
               </p>
               <p class="p_title_p">
                 <b>
