Update information on conferenes.

--- a/index.html
+++ b/index.html
@@ -409,8 +409,9 @@
                   target="_blank"
                   >Keith Kuester</a
                 >
-                in organizing the 53rd Konstanz Seminar on Monetary Theory and
-                Policy in 2022. My responsibilities included co-authoring the
+                in organizing the 53rd
+                <b>Konstanz Seminar on Monetary Theory and Policy</b>
+                in 2022. My responsibilities included co-authoring the
                 conference report, which you can find below. I am also looking
                 forward to assisting in the organization of the conference again
                 in 2023. For more information about the conference, please visit
@@ -483,15 +484,18 @@
                 >
               </div>
               <p>
-                In addition, I will be co-organizing the 1st
-                Bonn-Frankfurt-Mannheim PhD Workshop, which will be held on May
-                5-6, 2023 in Frankfurt. Stay tuned for more details about the
-                event.
+                In addition, I will be co-organizing the 1st<b>
+                  Bonn-Frankfurt-Mannheim PhD Workshop </b
+                >, which will be held on May 5-6, 2023 in Frankfurt. For more
+                information about the conference, please visit the
+                <a href="https://sites.google.com/view/phd-conference/home"
+                  >conference website</a
+                >.
               </p>
               <p>
-                I have organized the Bonn macro reading group for PhD students
-                on a regular basis, including in summer 2021, winter 2021,
-                summer 2022, and winter 2022. If you are interested in the
+                I have organized the <b>Bonn macro reading group</b> for PhD
+                students on a regular basis, including in summer 2021, winter
+                2021, summer 2022, and winter 2022. If you are interested in the
                 line-up, please do not hesitate to send me an email for more
                 information.
               </p>
