--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 abstract
               </a>
               |
-              <a href="/papers/GKN_ESPS.pdf" role="button" target="_blank">
+              <a href="/papers/GHK_ESPS.pdf" role="button" target="_blank">
                 current version <span class="fa fa-file-pdf-o"></span>
               </a>
               |
@@ -172,7 +172,7 @@
                 aria-expanded="false" aria-controls="collapse-ImpEmp">
                 citation
               </a>
-              <a href="/papers/GKN_ESPS.bib" role="button" target="_blank">
+              <a href="/papers/GHK_ESPS.bib" role="button" target="_blank">
                 <span class="fa fa-file-code-o"></span>
               </a>
             </p>
