--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
               <b> Distributional consequences of monetary unions </b> | with
               <a href="https://keithkuester.eu" class="n_link" role="button" target="_blank">Keith Kuester</a>
             </p>
-            <p class="p_abstract_p">[draft available upon request]</p>
+            <!-- <p class="p_abstract_p">[draft available upon request]</p> -->
           </div>
         </div>
       </section>
