Update website with recent activities.

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, shrink-to-fit=no" />
   <title>Sebastian Hildebrand &ndash; University of Bonn</title>
   <meta name="description"
-    content="I am a Ph.D. student in economics at the University of Bonn. My research field is macroeconomics, where I study questions in monetary theory and inequality." />
+    content="I am a PhD student in economics at the University of Bonn. My research field is macroeconomics, where I study questions in monetary theory and inequality." />
   <link rel="canonical" href="https://hildebrandecon.github.io/" />
   <meta property="og:title" content="Sebastian Hildebrand" />
   <meta property="og:description"
-    content="I am a Ph.D. student in economics at the University of Bonn. My research field is macroeconomics, where I study questions in monetary theory and inequality." />
+    content="I am a PhD student in economics at the University of Bonn. My research field is macroeconomics, where I study questions in monetary theory and inequality." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://hildebrandecon.github.io/" />
   <meta name="google-site-verification" content="ahWRUSEJh2YRMnxcVkSEhwlhxBZEfz1xDAu38m6dols" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Sebastian Hildebrand" />
   <meta name="twitter:description"
-    content="I am a Ph.D. student in economics at the University of Bonn. My research field is macroeconomics, where I study questions in monetary theory and inequality." />
+    content="I am a PhD student in economics at the University of Bonn. My research field is macroeconomics, where I study questions in monetary theory and inequality." />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -69,21 +69,26 @@
         <div class="row justify-content-between">
           <div class="col-lg-8 px-3">
             <h4 class="section">Sebastian Hildebrand</h4>
-            <p>Ph.D. candidate in Economics</p>
+            <p>PhD candidate in Economics</p>
           </div>
         </div>
 
         <div class="row justify-content-between">
           <div class="col-lg-8 px-3 order-2 order-lg-1">
             <p>
-              Welcome to my website! I am a Ph.D. candidate in economics at
+              Welcome to my website! I am a PhD candidate in economics at
               the University of Bonn, where I focus on macroeconomics and
               monetary theory. In addition to these research interests, I am
               also interested in practical monetary policy, inequality, and
               climate change.
             </p>
             <p>
-              Prior to pursuing my Ph.D., I completed my studies in Economics
+              Currently I am visiting the Directorate General Research at the European Central Bank as a PhD trainee. I
+              am working with the research task-force on "Heterogeneity in Macroeconomics" (supervised by Oreste
+              Tristani and Michele Lenza).
+            </p>
+            <p>
+              Prior to pursuing my PhD, I completed my studies in Economics
               and Social Sciences in Erfurt and Cracow, and Money and Finance
               in Frankfurt and Rome. In addition to my academic pursuits, I
               have also gained valuable research and policy experience at the
@@ -285,6 +290,18 @@
               <a href="https://keithkuester.eu" class="n_link" role="button" target="_blank">Keith Kuester</a>
             </p>
             <!-- <p class="p_abstract_p">[draft available upon request]</p> -->
+
+            <p class="p_title_p">
+              <b> The simple life? Heterogeneity in income risk and household portfolios </b> | with Christian Bayer,
+              Thomas Hintermaier, Moritz Kuhn and Gasper Ploj
+            </p>
+            <!-- <p class="p_abstract_p">[draft available upon request]</p> -->
+
+            <p class="p_title_p">
+              <b> Household heterogeneity in open economies </b> | with Alexandros Gilch
+            </p>
+            <!-- <p class="p_abstract_p">[draft available upon request]</p> -->
+
           </div>
         </div>
       </section>
@@ -300,11 +317,11 @@
             <p>
               I had the opportunity to assist
               <a href="https://keithkuester.eu" class="n_link" role="button" target="_blank">Keith Kuester</a>
-              in organizing the 53rd
+              in organizing the 53rd and 54th
               <b>Konstanz Seminar on Monetary Theory and Policy</b>
-              in 2022. My responsibilities included co-authoring the
-              conference report, which you can find below. I am also assisting in the organization of the conference
-              again in 2023. For more information about the conference, please visit
+              in 2022 and 2023. My responsibilities included co-authoring the
+              conference reports, which you can find below. I am also assisting in the organization of the conference
+              again in 2024. For more information about the conference, please visit
               the
               <a href="https://konstanzseminar.org">conference website</a>.
             </p>
@@ -352,15 +369,60 @@
 }
                </pre>
             </div>
+
+            <p class="p_title_p">
+              <b>
+                54th Konstanz Seminar on Monetary Theory and Policy 2023
+              </b>
+              | with Gero Stiepelmann [coming soon]
+            </p>
+            <!-- <p class="p_abstract_p">
+              <a class="collapse-show showAbstract" data-toggle="collapse" href="#abstract-Konstanz2022" role="button"
+                aria-expanded="false" aria-controls="collapse-ImpEmp">
+                abstract
+              </a>
+              |
+              <a href="/papers/Konstanz2022.pdf" role="button" target="_blank">
+                published version <span class="fa fa-file-pdf-o"></span>
+              </a>
+              |
+              <a class="collapse-show showAbstract" data-toggle="collapse" href="#bib-Konstanz2022" role="button"
+                aria-expanded="false" aria-controls="collapse-ImpEmp">
+                citation
+              </a>
+              <a href="/papers/Konstanz2022.bib" role="button" target="_blank">
+                <span class="fa fa-file-code-o"></span>
+              </a>
+            </p>
+            <div class="px-4 collapse card info" id="abstract-Konstanz2022">
+              <p class="text-justify">
+                In this report, we summarize the contributions to the 53rd
+                Konstanz Seminar on Monetary Theory and Policy 2022
+              </p>
+            </div>
+            <div class="px-4 collapse card info" id="bib-Konstanz2022">
+              <pre>
+@Article{Hildebrand2022_CCM,
+  author       = {Hildebrand, Sebastian and Stiepelmann, Gero},
+  date         = {2022},
+  journaltitle = {Credit and Capital Markets – Kredit und Kapital},
+  title        = {53rd Konstanz Seminar on Monetary Theory and Policy 2022},
+  doi          = {10.3790/ccm.55.3.419},
+  number       = {3},
+  pages        = {419--426},
+  volume       = {55},
+}
+               </pre>
+            </div> -->
+
             <p>
-              In addition, I am co-organizing the 1st <b>Bonn-Frankfurt-Mannheim PhD Conference </b>, which will be held
+              In addition, I co-organized the 1st <b>Bonn-Frankfurt-Mannheim PhD Conference </b>, which was held
               on May 5-6, 2023 in Frankfurt. For more information about the conference, please visit the
               <a href="https://sites.google.com/view/phd-conference/home">conference website</a>.
             </p>
             <p>
               I have organized the <b>Bonn macro reading group</b> for PhD
-              students on a regular basis, including in summer 2021, winter
-              2021, summer 2022, and winter 2022. If you are interested in the
+              students on a regular basis since 2021. If you are interested in the
               line-up, please do not hesitate to send me an email for more
               information.
             </p>
@@ -390,18 +452,18 @@
               <tr>
                 <td style="vertical-align: top">2020 - present</td>
                 <td style="padding-right: 10px"></td>
-                <td>Ph.D. in Economics, University of Bonn</td>
+                <td>PhD in Economics, University of Bonn</td>
               </tr>
               <tr>
                 <td style="vertical-align: top">2020 - 2022</td>
                 <td></td>
-                <td>M.Sc. in Economic Research, University of Bonn</td>
+                <td>MSc in Economic Research, University of Bonn</td>
               </tr>
               <tr>
                 <td style="vertical-align: top">2017 - 2020</td>
                 <td></td>
                 <td>
-                  M.Sc. in Money and Finance, University of Frankfurt & LUISS
+                  MSc in Money and Finance, University of Frankfurt & LUISS
                   University Rome
                 </td>
               </tr>
@@ -409,7 +471,7 @@
                 <td style="vertical-align: top">2013 - 2017</td>
                 <td></td>
                 <td>
-                  B.A. in Economics and Social Sciences, University of Erfurt
+                  BA in Economics and Social Sciences, University of Erfurt
                   & Cracow University of Economics
                 </td>
               </tr>
@@ -421,7 +483,15 @@
 
             <table>
               <tr>
-                <td style="vertical-align: top">2021 - present</td>
+                <td style="vertical-align: top">2023 - present</td>
+                <td></td>
+                <td>
+                  Traineeship in DG Research,
+                  European Central Bank
+                </td>
+              </tr>
+              <tr>
+                <td style="vertical-align: top">2021 - 2023</td>
                 <td style="padding-right: 10px"></td>
                 <td>
                   Research assistant for Prof. Bayer and Prof. Kuhn,
@@ -454,7 +524,7 @@
                 <td style="vertical-align: top">2022 - present</td>
                 <td style="padding-right: 10px"></td>
                 <td>
-                  Ph.D. Scholarship, German Research Foundation (through
+                  PhD Scholarship, German Research Foundation (through
                   Research Training Group 2281 "The Macroeconomics of
                   Inequality")
                 </td>
@@ -463,7 +533,7 @@
                 <td style="vertical-align: top">2020 - 2022</td>
                 <td></td>
                 <td>
-                  Ph.D. Scholarship, German Research Foundation (through Bonn
+                  PhD Scholarship, German Research Foundation (through Bonn
                   Graduate School of Economics)
                 </td>
               </tr>
