--- a/index.html
+++ b/index.html
@@ -183,18 +183,14 @@
             </p>
             <div class="px-4 collapse card info" id="abstract-GHK_ESPS">
               <p class="text-justify">
-                A common assumption in macroeconomics is that energy prices
-                are determined in a world-wide, rather frictionless market.
-                This no longer seems an adequate description for the situation
-                that much of Europe currently faces. Rather, one reading is
-                that shortages exist in the quantity of energy available. Such
-                limits to the supply of energy mean that the local price of
-                energy is affected by domestic economic activity. In a simple
-                open-economy New Keynesian setting, the paper shows conditions
-                under which energy shortages can raise the risk of
-                self-fulfilling fluctuations. A firmer focus of the central
-                bank on input prices (or on headline consumer prices) removes
-                such risks.
+
+                Recent changes in the macroeconomic environment have raised and likely will con- tinue to raise the
+                spectre of local shortages of production inputs. Limits to the supply of such goods mean that the local
+                price of the goods may be rather elastic to domestic economic activity. In a simple open-economy New
+                Keynesian setting, the paper explores conditions under which such shortages can raise the risk of self-
+                fulfilling fluctuations. The paper highlights the role of ownership of the constrained factor, marginal
+                propensities to consume, the factor’s use in consumption and pro- duction, and fiscal policy. A firmer
+                focus of the central bank on input prices (or on headline consumer prices) removes such risks.
               </p>
             </div>
             <div class="px-4 collapse card info" id="bib-GHK_ESPS">
@@ -421,7 +417,7 @@
               <a href="https://sites.google.com/view/phd-conference/home">conference website</a>.
             </p>
             <p>
-              I have organized the <b>Bonn macro reading group</b> for PhD
+              I have co-organized the <b>Bonn macro reading group</b> for PhD
               students on a regular basis since 2021. If you are interested in the
               line-up, please do not hesitate to send me an email for more
               information.
@@ -612,7 +608,7 @@
     <footer class="py-3 bg-dark">
       <div class="container px-4">
         <p class="m-0 text-center text-white">
-          Sebastian Hildebrand - University of Bonn | Last updated: January
+          Sebastian Hildebrand - University of Bonn | Last updated: October
           2023.
         </p>
       </div>
