--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <h4 class="section">Working papers</h4>
 
             <p class="p_title_p">
-              <b> Limited energy supply, sunspots, and monetary policy </b> |
+              <b> Limited (energy) supply, sunspots, and monetary policy </b> |
               with Nils Gornemann and
               <a href="https://keithkuester.eu" class="n_link" role="button" target="_blank">Keith Kuester</a>
             </p>
@@ -183,7 +183,6 @@
             </p>
             <div class="px-4 collapse card info" id="abstract-GHK_ESPS">
               <p class="text-justify">
-
                 Recent changes in the macroeconomic environment have raised and likely will con- tinue to raise the
                 spectre of local shortages of production inputs. Limits to the supply of such goods mean that the local
                 price of the goods may be rather elastic to domestic economic activity. In a simple open-economy New
@@ -310,14 +309,18 @@
         <div class="row">
           <div class="col-md">
             <h4 class="section">Other activities</h4>
+
+            <p class="p_title_p">
+              <b> Konstanz Seminar on Monetary Theory and Policy </b>
+            </p>
+
             <p>
               I had the opportunity to assist
               <a href="https://keithkuester.eu" class="n_link" role="button" target="_blank">Keith Kuester</a>
               in organizing the 53rd and 54th
               <b>Konstanz Seminar on Monetary Theory and Policy</b>
               in 2022 and 2023. My responsibilities included co-authoring the
-              conference reports, which you can find below. I am also assisting in the organization of the conference
-              again in 2024. For more information about the conference, please visit
+              conference reports, which you can find below. For more information about the conference, please visit
               the
               <a href="https://konstanzseminar.org">conference website</a>.
             </p>
@@ -348,7 +351,7 @@
             <div class="px-4 collapse card info" id="abstract-Konstanz2022">
               <p class="text-justify">
                 In this report, we summarize the contributions to the 53rd
-                Konstanz Seminar on Monetary Theory and Policy 2022
+                Konstanz Seminar on Monetary Theory and Policy 2022.
               </p>
             </div>
             <div class="px-4 collapse card info" id="bib-Konstanz2022">
@@ -370,54 +373,80 @@
               <b>
                 54th Konstanz Seminar on Monetary Theory and Policy 2023
               </b>
-              | with Gero Stiepelmann [coming soon]
+              | with Gero Stiepelmann
             </p>
-            <!-- <p class="p_abstract_p">
-              <a class="collapse-show showAbstract" data-toggle="collapse" href="#abstract-Konstanz2022" role="button"
+            <p class="p_abstract_p">
+              <a class="collapse-show showAbstract" data-toggle="collapse" href="#abstract-Konstanz2023" role="button"
                 aria-expanded="false" aria-controls="collapse-ImpEmp">
                 abstract
               </a>
+
               |
-              <a href="/papers/Konstanz2022.pdf" role="button" target="_blank">
+              <a href="/papers/Konstanz2023.pdf" role="button" target="_blank">
                 published version <span class="fa fa-file-pdf-o"></span>
               </a>
               |
-              <a class="collapse-show showAbstract" data-toggle="collapse" href="#bib-Konstanz2022" role="button"
+              <a class="collapse-show showAbstract" data-toggle="collapse" href="#bib-Konstanz2023" role="button"
                 aria-expanded="false" aria-controls="collapse-ImpEmp">
                 citation
               </a>
-              <a href="/papers/Konstanz2022.bib" role="button" target="_blank">
+              <a href="/papers/Konstanz2023.bib" role="button" target="_blank">
                 <span class="fa fa-file-code-o"></span>
               </a>
             </p>
-            <div class="px-4 collapse card info" id="abstract-Konstanz2022">
+            <div class="px-4 collapse card info" id="abstract-Konstanz2023">
               <p class="text-justify">
-                In this report, we summarize the contributions to the 53rd
-                Konstanz Seminar on Monetary Theory and Policy 2022
+                In this report, we summarize the contributions to the 54th
+                Konstanz Seminar on Monetary Theory and Policy 2023.
               </p>
             </div>
             <div class="px-4 collapse card info" id="bib-Konstanz2022">
               <pre>
-@Article{Hildebrand2022_CCM,
+@Article{Hildebrand2023_CCM,
   author       = {Hildebrand, Sebastian and Stiepelmann, Gero},
-  date         = {2022},
-  journaltitle = {Credit and Capital Markets – Kredit und Kapital},
-  title        = {53rd Konstanz Seminar on Monetary Theory and Policy 2022},
-  doi          = {10.3790/ccm.55.3.419},
-  number       = {3},
-  pages        = {419--426},
-  volume       = {55},
+  date         = {2023-10},
+  journaltitle = {Credit and Capital Markets -- Kredit und Kapital},
+  title        = {54th Konstanz Seminar on Monetary Theory and Policy 2023},
+  doi          = {10.3790/ccm.2023.01.hildebrand.stiepelmann},
+  number       = {2},
+  pages        = {1--9},
+  volume       = {56},
 }
                </pre>
-            </div> -->
+            </div>
+
+            <p class="p_title_p">
+              <b> Bonn-Frankfurt-Mannheim PhD Conference </b>
+            </p>
 
             <p>
-              In addition, I co-organized the 1st <b>Bonn-Frankfurt-Mannheim PhD Conference </b>, which was held
-              on May 5-6, 2023 in Frankfurt. For more information about the conference, please visit the
-              <a href="https://sites.google.com/view/phd-conference/home">conference website</a>.
+              I co-organized the 1st <b>Bonn-Frankfurt-Mannheim PhD Conference</b>, which was held at Goethe University
+              in Frankfurt. Approximately 150 young researchers presented and discussed their ideas during presentation
+              sessions, plenary discussions, a keynote by Ulrike Malmendier, over coffee and lunch, and a conference
+              dinner. In total, we have raised approximately EUR 17,000 from various sources..
+
+              <br />
+
+              I am also co-organizing the 2nd <b>Bonn-Frankfurt-Mannheim PhD Conference</b>, which will be held at the
+              University of Bonn. For more information,
+              please consult the <a href="https://sites.google.com/view/phd-conference/home">conference website</a>
             </p>
+
+            <p class="p_title_p">
+              <b> Bonn-Berlin macro workshop </b>
+            </p>
+
             <p>
-              I have co-organized the <b>Bonn macro reading group</b> for PhD
+              I am co-organize the 1st <b>Bonn-Berlin macro workshop</b>, which will be held at the University of Bonn
+              in March 2024. Stay tuned for more information!
+            </p>
+
+            <p class="p_title_p">
+              <b> Bonn macro reading group </b>
+            </p>
+
+            <p>
+              I co-organize the <b>Bonn macro reading group</b> for PhD
               students on a regular basis since 2021. If you are interested in the
               line-up, please do not hesitate to send me an email for more
               information.
