Add Bonn-Berlin program.

--- a/index.html
+++ b/index.html
@@ -437,8 +437,9 @@
             </p>
 
             <p>
-              I am co-organize the 1st <b>Bonn-Berlin macro workshop</b>, which will be held at the University of Bonn
-              in March 2024. Stay tuned for more information!
+              I am co-organizing the 1st <b>Bonn-Berlin macro workshop</b>, which will be held at the University of Bonn
+              from March 11 to March 13, 2024. The program can be found <a
+                href="/other/Program Bonn-Berlin PhD Workshop.pdf">here</a>.
             </p>
 
             <p class="p_title_p">
