--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                 <td style="vertical-align: top">2023 - present</td>
                 <td></td>
                 <td>
-                  Traineeship in DG Research,
+                  PhD Traineeship in DG Research,
                   European Central Bank
                 </td>
               </tr>
