Update beginning of May.

--- a/index.html
+++ b/index.html
@@ -452,6 +452,16 @@
               line-up, please do not hesitate to send me an email for more
               information.
             </p>
+
+            <p class="p_title_p">
+              <b> First-generation academics at Bonn Graduate School of Economics </b>
+            </p>
+
+            <p>
+              I am the initiator of the <b>first-generation academics</b> network at the Bonn Graduate School of
+              Economics. The group aims to provide a platform for first-generation academics PhD student to exchange
+              experiences and support each other in their academic careers.
+            </p>
           </div>
         </div>
       </section>
