--- a/index.html
+++ b/index.html
@@ -183,13 +183,13 @@
             </p>
             <div class="px-4 collapse card info" id="abstract-GHK_ESPS">
               <p class="text-justify">
-                Recent changes in the macroeconomic environment have raised and likely will con- tinue to raise the
-                spectre of local shortages of production inputs. Limits to the supply of such goods mean that the local
-                price of the goods may be rather elastic to domestic economic activity. In a simple open-economy New
-                Keynesian setting, the paper explores conditions under which such shortages can raise the risk of self-
-                fulfilling fluctuations. The paper highlights the role of ownership of the constrained factor, marginal
-                propensities to consume, the factor’s use in consumption and pro- duction, and fiscal policy. A firmer
-                focus of the central bank on input prices (or on headline consumer prices) removes such risks.
+                In recent years the macroeconomic environment has been increasingly characterized by local shortages of
+                inputs. Limitations in the supply of such factors can imply that their local price is quite elastic to
+                domestic economic activity. We examine how this affects the IS and the Phillips curve in a simple New
+                Keynesian open economy setting. We emphasize the role of ownership of the factor, marginal propensities
+                to consume, dual use of the factor in consumption, and fiscal policy. We find that shortages can
+                increase the risk of self-fulfilling fluctuations. A stronger focus by the central bank on input prices
+                or on headline consumer prices removes such risks.
               </p>
             </div>
             <div class="px-4 collapse card info" id="bib-GHK_ESPS">
