Update of CV and wording.

--- a/index.html
+++ b/index.html
@@ -76,28 +76,23 @@
         <div class="row justify-content-between">
           <div class="col-lg-8 px-3 order-2 order-lg-1">
             <p>
-              Welcome to my website! I am a PhD candidate in economics at
-              the University of Bonn, where I focus on macroeconomics and
-              monetary theory. In addition to these research interests, I am
-              also interested in practical monetary policy, inequality, and
-              climate change.
+              Welcome to my website! I am a PhD candidate in economics at the University of Bonn, focusing on
+              macroeconomics and monetary theory. In addition to these research interests, I am also passionate about
+              practical monetary policy, inequality, and climate change.
             </p>
             <p>
-              Currently I am visiting the Directorate General Research at the European Central Bank as a PhD trainee. I
-              am working with the research task-force on "Heterogeneity in Macroeconomics" (supervised by Oreste
-              Tristani and Michele Lenza).
+              During the academic year 2023/24, I visited the Directorate General Research at the European Central Bank
+              as a PhD trainee. There, I worked with the research task force on "Heterogeneity in Macroeconomics,"
+              supervised by Oreste Tristani and Michele Lenza.
             </p>
             <p>
-              Prior to pursuing my PhD, I completed my studies in Economics
-              and Social Sciences in Erfurt and Cracow, and Money and Finance
-              in Frankfurt and Rome. In addition to my academic pursuits, I
-              have also gained valuable research and policy experience at the
-              European Central Bank and Deutsche Bundesbank, as well as a year
-              of work in the private sector at Deloitte.
+              Before pursuing my PhD, I completed studies in Economics and Social Sciences in Erfurt and Cracow, and
+              Money and Finance in Frankfurt and Rome. Besides my academic pursuits, I have gained valuable research and
+              policy experience at the European Central Bank and Deutsche Bundesbank, along with a year of work in the
+              private sector at Deloitte.
             </p>
             <p>
-              If you want to work with me or simply have a chat, feel free to
-              contact me via email or social media.
+              If you would like to collaborate or simply have a chat, feel free to contact me via email or social media.
             </p>
             <p align="center">
               <a href="mailto:sebastian.hildebrand@uni-bonn.de" class="n_link" role="button" target="_blank">
@@ -281,14 +276,14 @@
             <h4 class="section">Work in progress</h4>
 
             <p class="p_title_p">
-              <b> Distributional consequences of monetary unions </b> | with
-              <a href="https://keithkuester.eu" class="n_link" role="button" target="_blank">Keith Kuester</a>
+              <b> The simple life? Heterogeneity in income risk and household portfolios </b> | with Christian Bayer,
+              Thomas Hintermaier, Moritz Kuhn and Gasper Ploj
             </p>
             <!-- <p class="p_abstract_p">[draft available upon request]</p> -->
 
             <p class="p_title_p">
-              <b> The simple life? Heterogeneity in income risk and household portfolios </b> | with Christian Bayer,
-              Thomas Hintermaier, Moritz Kuhn and Gasper Ploj
+              <b> Distributional consequences of monetary unions </b> | with
+              <a href="https://keithkuester.eu" class="n_link" role="button" target="_blank">Keith Kuester</a>
             </p>
             <!-- <p class="p_abstract_p">[draft available upon request]</p> -->
 
@@ -320,8 +315,7 @@
               in organizing the 53rd and 54th
               <b>Konstanz Seminar on Monetary Theory and Policy</b>
               in 2022 and 2023. My responsibilities included co-authoring the
-              conference reports, which you can find below. For more information about the conference, please visit
-              the
+              conference reports, which you can find below. For more information about the conference, please visit the
               <a href="https://konstanzseminar.org">conference website</a>.
             </p>
             <p class="p_title_p">
@@ -420,16 +414,15 @@
             </p>
 
             <p>
-              I co-organized the 1st <b>Bonn-Frankfurt-Mannheim PhD Conference</b>, which was held at Goethe University
-              in Frankfurt. Approximately 150 young researchers presented and discussed their ideas during presentation
-              sessions, plenary discussions, a keynote by Ulrike Malmendier, over coffee and lunch, and a conference
-              dinner. In total, we have raised approximately EUR 17,000 from various sources..
-
-              <br />
-
-              I am also co-organizing the 2nd <b>Bonn-Frankfurt-Mannheim PhD Conference</b>, which will be held at the
-              University of Bonn. For more information,
-              please consult the <a href="https://sites.google.com/view/phd-conference/home">conference website</a>
+              I co-organized the 1st and 2nd <b>Bonn-Frankfurt-Mannheim PhD Conference</b>, held at Goethe University in
+              Frankfurt in 2023 and the University of Bonn in 2024, respectively. The conference provided a forum for
+              approximately 150 young researchers, allowing them to present and discuss their ideas in presentation
+              sessions, plenary discussions, and keynotes by Ulrike Malmendier (1st edition) and Isabel Schnabel and
+              Luca Braghieri (2nd edition). These discussions continued over coffee, lunch, and at the conference
+              dinner. We raised approximately EUR 17,000 for the first edition and EUR 18,000 for the second from
+              various sources. For more information, please visit the <a
+                href="https://sites.google.com/view/phd-conference/home">conference
+                website</a>.
             </p>
 
             <p class="p_title_p">
@@ -437,9 +430,9 @@
             </p>
 
             <p>
-              I am co-organizing the 1st <b>Bonn-Berlin macro workshop</b>, which will be held at the University of Bonn
-              from March 11 to March 13, 2024. The program can be found <a
-                href="/other/Program Bonn-Berlin PhD Workshop.pdf">here</a>.
+              I co-organized the 1st <b>Bonn-Berlin Macro Workshop</b>, held at the University of Bonn in 2024.
+              Approximately 30 young macroeconomists from Bonn and Berlin presented and discussed their work. The
+              program can be found <a href="/other/Program Bonn-Berlin PhD Workshop.pdf">here</a>.
             </p>
 
             <p class="p_title_p">
@@ -447,10 +440,8 @@
             </p>
 
             <p>
-              I co-organize the <b>Bonn macro reading group</b> for PhD
-              students on a regular basis since 2021. If you are interested in the
-              line-up, please do not hesitate to send me an email for more
-              information.
+              I have been co-organizing the <b>Bonn Macro Reading Group</b> for PhD students on a regular basis since
+              2021. If you are interested in the lineup, please feel free to email me for more information.
             </p>
 
             <p class="p_title_p">
@@ -458,9 +449,9 @@
             </p>
 
             <p>
-              I am the initiator of the <b>first-generation academics</b> network at the Bonn Graduate School of
-              Economics. The group aims to provide a platform for first-generation academics PhD student to exchange
-              experiences and support each other in their academic careers.
+              I am the initiator of the <b>First-Generation Academics</b> network at the Bonn Graduate School of
+              Economics. The group aims to provide a platform for first-generation PhD students to exchange experiences
+              and support each other in their academic careers.
             </p>
           </div>
         </div>
@@ -519,7 +510,7 @@
 
             <table>
               <tr>
-                <td style="vertical-align: top">2023 - present</td>
+                <td style="vertical-align: top">2023 - 2024</td>
                 <td></td>
                 <td>
                   PhD Traineeship in DG Research,
@@ -557,20 +548,17 @@
 
             <table>
               <tr>
-                <td style="vertical-align: top">2022 - present</td>
-                <td style="padding-right: 10px"></td>
+                <td style="vertical-align: top">2020 - present</td>
+                <td></td>
                 <td>
-                  PhD Scholarship, German Research Foundation (through
-                  Research Training Group 2281 "The Macroeconomics of
-                  Inequality")
+                  Dissertation Scholarship, Bonn Graduate School of Economics
                 </td>
               </tr>
               <tr>
-                <td style="vertical-align: top">2020 - 2022</td>
-                <td></td>
+                <td style="vertical-align: top">2022 - 2024</td>
+                <td style="padding-right: 10px"></td>
                 <td>
-                  PhD Scholarship, German Research Foundation (through Bonn
-                  Graduate School of Economics)
+                  Dissertation Scholarship, Research Training Group 2281 "The Macroeconomics of Inequality"
                 </td>
               </tr>
               <tr>
@@ -648,7 +636,7 @@
     <footer class="py-3 bg-dark">
       <div class="container px-4">
         <p class="m-0 text-center text-white">
-          Sebastian Hildebrand - University of Bonn | Last updated: March
+          Sebastian Hildebrand - University of Bonn | Last updated: May
           2024.
         </p>
       </div>
