Minor update after ECB.

--- a/index.html
+++ b/index.html
@@ -281,15 +281,15 @@
             </p>
             <!-- <p class="p_abstract_p">[draft available upon request]</p> -->
 
-            <p class="p_title_p">
+            <!-- <p class="p_title_p">
               <b> Distributional consequences of monetary unions </b> | with
               <a href="https://keithkuester.eu" class="n_link" role="button" target="_blank">Keith Kuester</a>
-            </p>
+            </p> -->
             <!-- <p class="p_abstract_p">[draft available upon request]</p> -->
 
-            <p class="p_title_p">
+            <!-- <p class="p_title_p">
               <b> Household heterogeneity in open economies </b> | with Alexandros Gilch
-            </p>
+            </p> -->
             <!-- <p class="p_abstract_p">[draft available upon request]</p> -->
 
           </div>
@@ -636,7 +636,7 @@
     <footer class="py-3 bg-dark">
       <div class="container px-4">
         <p class="m-0 text-center text-white">
-          Sebastian Hildebrand - University of Bonn | Last updated: May
+          Sebastian Hildebrand - University of Bonn | Last updated: June
           2024.
         </p>
       </div>
